refactor: button in our pets carousel

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -72,8 +72,7 @@
             <h3 class="our-friends__title block__title"><span class="separator">Our friends who</span> are looking for a
                 house</h3>
             <div class="slider-wrapper">
-                <button class="arrow arrow-left"></button>
-                <button class="slider-wrapper_arrow arrow-right"></button>
+                <button class="slider-wrapper_arrow arrow-left"></button>
                 <div class="carousel-wrapper" id="carousel-wrapper">
                     <div class="carousel" id="carousel">
                         <ul class="item" id="item-left">
