fix: delite anchor in navigation link

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -21,7 +21,7 @@
                 </a>
                 <nav class="header__navigation">
                     <ul class="navigation">
-                        <li class="navigation__element"><a class="navigation__element__link active" href="#about">About
+                        <li class="navigation__element"><a class="navigation__element__link active">About
                                 the shelter</a></li>
                         <li class="navigation__element"><a class="navigation__element__link"
                                 href="../pets/index.html">Our pets</a></li>
