feat: add initialization of arrays for working with cards

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -75,7 +75,7 @@
                 <button class="slider-wrapper_arrow arrow-left"></button>
                 <div class="carousel-wrapper" id="carousel-wrapper">
                     <div class="carousel" id="carousel">
-                        <!-- <ul class="item" id="item-left">
+                        <ul class="item" id="item-left">
                             <li class="card">
                                 <img src="../../assets/images/sophia.png" class="card__picture" alt="Dog Sophia"
                                     width="270" height="270">
@@ -94,7 +94,7 @@
                                 <span class="card__title">Charly</span>
                                 <button class="card__button">Learn more</button>
                             </li>
-                        </ul> -->
+                        </ul> 
 
                         <ul class="item" id="item-active">
                             <li class="card">
@@ -117,7 +117,7 @@
                             </li>
                         </ul>
 
-                        <!-- <ul class="item" id="item-right">
+                        <ul class="item" id="item-right">
                             <li class="card">
                                 <img src="../../assets/images/timmy.png" class="card__picture" alt="Cat Timmy"
                                     width="270" height="270">
@@ -136,7 +136,7 @@
                                 <span class="card__title">Charly</span>
                                 <button class="card__button">Learn more</button>
                             </li>
-                        </ul> -->
+                        </ul> 
                     </div>
                 </div>
                 <button class="slider-wrapper_arrow arrow-right"></button>
