--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -76,7 +76,7 @@
                 <div class="carousel-wrapper" id="carousel-wrapper">
                     <div class="carousel" id="carousel">
                         <ul class="item" id="item-left">
-                            <li class="card">
+                            <!-- <li class="card">
                                 <img src="../../assets/images/sophia.png" class="card__picture" alt="Dog Sophia"
                                     width="270" height="270">
                                 <span class="card__title">Sophia</span>
@@ -93,11 +93,11 @@
                                     height="270">
                                 <span class="card__title">Charly</span>
                                 <button class="card__button">Learn more</button>
-                            </li>
+                            </li> -->
                         </ul> 
 
                         <ul class="item" id="item-active">
-                            <li class="card">
+                            <!-- <li class="card">
                                 <img src="../../assets/images/katrine.png" class="card__picture" alt="Cat Katrine"
                                     width="270" height="270">
                                 <span class="card__title">Katrine</span>
@@ -114,11 +114,11 @@
                                     height="270">
                                 <span class="card__title">Woody</span>
                                 <button class="card__button">Learn more</button>
-                            </li>
+                            </li> -->
                         </ul>
 
                         <ul class="item" id="item-right">
-                            <li class="card">
+                            <!-- <li class="card">
                                 <img src="../../assets/images/timmy.png" class="card__picture" alt="Cat Timmy"
                                     width="270" height="270">
                                 <span class="card__title">Timmy</span>
@@ -135,7 +135,7 @@
                                     height="270">
                                 <span class="card__title">Charly</span>
                                 <button class="card__button">Learn more</button>
-                            </li>
+                            </li> -->
                         </ul> 
                     </div>
                 </div>
