--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -220,6 +220,32 @@
             <div class="footer__item"></div>
         </div>
     </footer>
+    <div class="popup">
+        <div class="popup__body">
+            <div class="popup__content">
+                <button class="popup__close">
+                    <img src="../../assets/icons/icon-cross.svg" alt="close popup button">
+                </button>
+                <div class="popup__image">
+                    <img src="../../assets/images/jennifer.png" alt="Labrador Jennifer" class="popup__image-picture">
+                </div>
+                <div class="popup__text">
+                        <div class="popup__text-title">Jennifer</div>
+                        <div class="popup__text-subtitle">Dog - Labrador</div>
+                        <div class="popup__text-description">Jennifer is a sweet 2 months old Labrador that is patiently 
+                            waiting to find a new forever home. This girl really enjoys being able to go outside to run 
+                            and play, but won't hesitate to play up a storm in the house if she has all of her favorite 
+                            toys.</div>
+                        <ul class="popup__text-list">
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Age:</span> 2 months</li>
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Inoculations:</span> none</li>
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Diseases:</span> none</li>
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Parasites:</span> none</li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
