feat: add functions generatePopup, closePopup and listeners for the work of popup

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -221,10 +221,10 @@
         </div>
     </footer>
     <div class="popup">
-        <div class="popup__body">
+        <!-- <div class="popup__body">
             <div class="popup__content">
                 <button class="popup__close">
-                    <img src="../../assets/icons/icon-cross.svg" alt="close popup button">
+                    <img src="../../assets/icons/icon-cross.svg" alt="close popup button" class="popup__close-img">
                 </button>
                 <div class="popup__image">
                     <img src="../../assets/images/jennifer.png" alt="Labrador Jennifer" class="popup__image-picture">
@@ -244,7 +244,7 @@
                         </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="script.js"></script>
 </body>
