feat: add popup functionality for pets-page

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -37,7 +37,7 @@
             <h3 class="our-friends__title block__title"><span class="separator">Our friends who</span> are looking for a house</h3>
             <div class="slider-wrapper">
                 <ul class="cards-container">
-                    <li class="card">
+                    <!-- <li class="card">
                         <img src="../../assets/images/katrine.png" class="card__picture" alt="Cat Katrine"
                             width="270" height="270">
                         <span class="card__title">Katrine</span>
@@ -84,7 +84,7 @@
                             height="270">
                         <span class="card__title">Freddie</span>
                         <button class="card__button">Learn more</button>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="slider-buttons">
                     <button class="slider-button slider-button_disabled">&lt;&lt;</button>
@@ -111,6 +111,32 @@
             <div class="footer__item"></div>
         </div>
     </footer>
+    <div class="popup">
+        <!-- <div class="popup__body">
+            <div class="popup__content">
+                <button class="popup__close">
+                    <img src="../../assets/icons/icon-cross.svg" alt="close popup button" class="popup__close-img">
+                </button>
+                <div class="popup__image">
+                    <img src="../../assets/images/jennifer.png" alt="Labrador Jennifer" class="popup__image-picture">
+                </div>
+                <div class="popup__text">
+                        <div class="popup__text-title">Jennifer</div>
+                        <div class="popup__text-subtitle">Dog - Labrador</div>
+                        <div class="popup__text-description">Jennifer is a sweet 2 months old Labrador that is patiently 
+                            waiting to find a new forever home. This girl really enjoys being able to go outside to run 
+                            and play, but won't hesitate to play up a storm in the house if she has all of her favorite 
+                            toys.</div>
+                        <ul class="popup__text-list">
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Age:</span> 2 months</li>
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Inoculations:</span> none</li>
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Diseases:</span> none</li>
+                            <li class="popup__text-list-element"><span class="list-elem__bold">Parasites:</span> none</li>
+                        </ul>
+                </div>
+            </div>
+        </div> -->
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
