feat: loading of the first page pagination, actions for the first and last paginations buttons

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -86,12 +86,12 @@
                         <button class="card__button">Learn more</button>
                     </li> -->
                 </ul>
-                <div class="slider-buttons">
-                    <button class="slider-button slider-button_disabled">&lt;&lt;</button>
-                    <button class="slider-button slider-button_disabled">&lt;</button>
-                    <button class="slider-button slider_button_active">1</button>
-                    <button class="slider-button">></button>
-                    <button class="slider-button">>></button>
+                <div class="pagination-buttons">
+                    <button class="pagination-button pagination-button__first">&lt;&lt;</button>
+                    <button class="pagination-button pagination-button__left">&lt;</button>
+                    <button class="pagination-button pagination-button__current button-active"></button>
+                    <button class="pagination-button pagination-button__right">></button>
+                    <button class="pagination-button pagination-button__last">>></button>
                 </div>
             </div>
         </div>
