refactor: add functions addClassAndAtribute and removeClassAndAtribute

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -87,11 +87,11 @@
                     </li> -->
                 </ul>
                 <div class="pagination-buttons">
-                    <button class="pagination-button pagination-button__first">&lt;&lt;</button>
-                    <button class="pagination-button pagination-button__left">&lt;</button>
+                    <button class="pagination-button pagination-button__first pagination-button__inactive-first">&lt;&lt;</button>
+                    <button class="pagination-button pagination-button__left pagination-button__inactive-first">&lt;</button>
                     <button class="pagination-button pagination-button__current button-active"></button>
-                    <button class="pagination-button pagination-button__right">></button>
-                    <button class="pagination-button pagination-button__last">>></button>
+                    <button class="pagination-button pagination-button__right pagination-button__inactive-last">></button>
+                    <button class="pagination-button pagination-button__last pagination-button__inactive-last">>></button>
                 </div>
             </div>
         </div>
